examples/test/testpolicy8325.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8325
  namespace: namespace49
spec:
  podSelector:
    matchLabels:
      key2: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value30
          key39: value19
      podSelector:
        matchLabels:
          key45: value23
          key47: value19
